[gd_scene load_steps=10 format=3 uid="uid://cwitwjhc7erih"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_hjpc4"]
[ext_resource type="Texture2D" uid="uid://bwhtynqqtjaji" path="res://assets/downloaded_slim/graphics/Super Grotto Escape Files/Characters/Player/spritesheets/player-run.png" id="2_4tdnr"]
[ext_resource type="PackedScene" uid="uid://b4ovdim2p6vd1" path="res://entities/damages/damage_receiver.tscn" id="5_naxqi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3j43t"]
radius = 32.0
height = 120.0

[sub_resource type="Animation" id="Animation_x2yl3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lf4rg"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bbll2"]
_data = {
"RESET": SubResource("Animation_x2yl3"),
"run": SubResource("Animation_lf4rg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yv1dy"]
size = Vector2(52, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bu62i"]
size = Vector2(20, 60)

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_hjpc4")

[node name="DamageNumberPos" type="Marker2D" parent="."]
position = Vector2(2.08165e-12, -130)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -76)
scale = Vector2(4, 4)
texture = ExtResource("2_4tdnr")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -60)
shape = SubResource("CapsuleShape2D_3j43t")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(480, -225)
remote_path = NodePath("../../Camera2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "run"
libraries = {
"": SubResource("AnimationLibrary_bbll2")
}

[node name="DamageReceiver" parent="." instance=ExtResource("5_naxqi")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageReceiver"]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_yv1dy")

[node name="DamageColddown" type="Timer" parent="DamageReceiver"]
one_shot = true

[node name="WallDetection" type="Area2D" parent="."]
position = Vector2(49, -63)
collision_layer = 0
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetection"]
position = Vector2(-26, -27)
shape = SubResource("RectangleShape2D_bu62i")

[node name="EffectsAttachment" type="Node2D" parent="."]

[node name="WeaponsAttachment" type="Node2D" parent="."]

[node name="Front" type="Marker2D" parent="WeaponsAttachment"]
position = Vector2(60, -50)

[node name="Top" type="Marker2D" parent="WeaponsAttachment"]
position = Vector2(0, -130)

[node name="Back" type="Marker2D" parent="WeaponsAttachment"]
position = Vector2(-35, -80)
